--- a/views/start_page.ejs
+++ b/views/start_page.ejs
@@ -21,7 +21,7 @@
             font-family: Candy, cursive;
             font-weight: 600;
             overflow: hidden;
-            background: #6ebbdf;
+            background: #47597e;
         }
     
         .tools {
@@ -46,7 +46,7 @@
         .border {
             width: 1000px;
             height: 600px;
-            border: 20px solid blue;
+            border: 20px solid 47597e;
             box-sizing: border-box;
             box-shadow: -5px 2px 10px 6px black;
         }
@@ -63,7 +63,7 @@
             border: 2px solid black;
             cursor: pointer;
             color: white;
-            background: #191919;
+            background: #293b5f;
             font-weight: bold;
             margin: 0 10px;
         }
@@ -81,7 +81,7 @@
         }
     
         .chat {
-            background: #454545;
+            background: #b2ab8c;
             width: 300px;
             height: 600px;
             position: absolute;
@@ -229,7 +229,7 @@
             });
         }
     </script>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="/">Charades</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
