--- a/views/start_page.ejs
+++ b/views/start_page.ejs
@@ -153,6 +153,119 @@
             padding: 2 25px 0 0;
             content: "f";
         }
+        .wrapper {
+            display: flex;
+            align-items: center;
+            flex-direction: column; 
+            justify-content: center;
+            width: 100%;
+            min-height: 100%;
+            padding: 20px;
+            }
+
+            #formContent {
+            -webkit-border-radius: 10px 10px 10px 10px;
+            border-radius: 10px 10px 10px 10px;
+            background: #718bc0;
+            padding: 30px;
+            width: 90%;
+            max-width: 450px;
+            position: relative;
+            padding: 0px;
+            -webkit-box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
+            box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
+            text-align: center;
+            }
+
+            #formFooter {
+            background-color: #47597e;
+            border-top: 1px solid #dce8f1;
+            padding: 25px;
+            text-align: center;
+            -webkit-border-radius: 0 0 10px 10px;
+            border-radius: 0 0 10px 10px;
+            }
+
+
+
+            /* TABS */
+
+            h2.inactive {
+            color: #cccccc;
+            }
+
+            h2.active {
+            color: #0d0d0d;
+            border-bottom: 2px solid #5fbae9;
+            }
+
+
+
+            /* FORM TYPOGRAPHY*/
+
+            input[type=button], input[type=submit], input[type=reset]  {
+            background-color: rgb(52,68,64);
+            border: none;
+            color: white;
+            padding: 15px 80px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            text-transform: uppercase;
+            font-size: 13px;
+            -webkit-box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
+            box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
+            -webkit-border-radius: 5px 5px 5px 5px;
+            border-radius: 5px 5px 5px 5px;
+            margin: 5px 20px 5px 20px;
+            -webkit-transition: all 0.3s ease-in-out;
+            -moz-transition: all 0.3s ease-in-out;
+            -ms-transition: all 0.3s ease-in-out;
+            -o-transition: all 0.3s ease-in-out;
+            transition: all 0.3s ease-in-out;
+            }
+            
+            input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover  {
+            background-color: #39ace7;
+            }
+
+            input[type=button]:active, input[type=submit]:active, input[type=reset]:active  {
+            -moz-transform: scale(0.95);
+            -webkit-transform: scale(0.95);
+            -o-transform: scale(0.95);
+            -ms-transform: scale(0.95);
+            transform: scale(0.95);
+            }
+
+            input[type=text] {
+            background-color: #f6f6f6;
+            border: none;
+            color: #0d0d0d;
+            padding: 15px 32px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 5px;
+            width: 85%;
+            border: 2px solid #f6f6f6;
+            -webkit-transition: all 0.5s ease-in-out;
+            -moz-transition: all 0.5s ease-in-out;
+            -ms-transition: all 0.5s ease-in-out;
+            -o-transition: all 0.5s ease-in-out;
+            transition: all 0.5s ease-in-out;
+            -webkit-border-radius: 5px 5px 5px 5px;
+            border-radius: 5px 5px 5px 5px;
+            }
+
+            input[type=text]:focus {
+            background-color: #fff;
+            border-bottom: 2px solid #5fbae9;
+            }
+
+            input[type=text]:placeholder {
+                color: #cccccc;
+            }
     </style>
 </head>
 
@@ -236,9 +349,6 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div id="navbar" class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-                <li><a href="index.html">Home</a></li>
-            </ul>
             <ul class="nav navbar-nav navbar-right">        
                 <fb:login-button id="fb-btn" scope="public_profile,email,user_birthday,user_location,user_posts"
                     onlogin="checkLoginState();" lang="ENG">
@@ -249,24 +359,16 @@
             </ul>
         </div>
     </nav>
-    
-    <div class="d-flex justify-content-center">
-    <div id="choices">
-        <form>
-            <label for="room_name">Room name:</label>
-            <input type="text" id="room_name">
-            <br>
-            <label for="player_name">Player name:</label>
-            <input type="text" id="player_name">
-        </form>
-        <div class="d-flex justify-content-center">
-            <!--
-            <a href="/auth/facebook" class="fb connect" role="button">Sign in with Facebook</a>
-            -->
-            <button id="make_game_button">Make game </button>
-            <button id="join_game_button"> Join game</button>
+    <div class="wrapper fadeInDown">
+        <div id="formContent">
+
+            <form>
+                <input type="text" id="player_name" class="fadeIn second" name="login" placeholder="Player name">
+                <input type="text" id="room_name" class="fadeIn third" name="login" placeholder="Room name">
+                <input type="submit" id="make_game_button" class="fadeIn fourth" value="Make game">
+                <input type="submit" id="join_game_button" class="fadeIn fourth" value="Join game">
+            </form>
         </div>
-    </div>
     </div>
     
     
@@ -313,6 +415,7 @@
                 room_name: room_name,
                 player_name: player_name,
             };
+
             $.ajax({
                 url: url,
                 async: true,
